CHANGES.txt - 2011-05-18
------------------------

CHANGES IN CUPS V1.5b1

	- The scheduler now allows the ServerAlias directive to contain multiple
	  hostnames separated by spaces or commas (STR #3813)
	- The scheduler now sets the process group for child processes and
	  manages the group (STR #2829)
	- Fixed some minor issues discovered by a Coverity scan (STR #3838)
	- The scheduler now more carefully creates and removes configuration,
	  cache, and state files (STR #3715)
	- The lpadmin command now allows default option values to be deleted
	  (STR #2959)
	- The lpadmin command now allows the cupsIPPSupplies and
	  cupsSNMPSupplies keywords to be set in a PPD file (STR #3825)
	- Moving a held job no longer releases it (STR #3839)
	- Restored support for GNU TLS and OpenSSL with threading enabled
	  (STR #3605)
	- Fixed a confusing error message from cups-polld (STR #3806)
	- Increased the default RIPCache value to 128MB (STR #3535)
	- MIME errors are now routed to the error_log file (STR #2410)
	- Updated PDF filter to support new Ghostscript ps2write device
	  (STR #3766)
	- Updated PDF filter to support new Poppler option to preserve page
	  sizes in PDF files when the user has not selected a particular media
	  size (STR #3689)
	- Added new PWG Raster filter for IPP Everywhere printer support.
	- Added printer-uuid attribute.
	- Added support for the cupsSingleFile PPD keyword.
	- Dropped support for the printer-state-history attribute (STR #3654)
	- Added support for a new cupsIPPSupplies keyword in PPD files to allow
	  drivers to disable IPP supply level reporting.
	- Added support for a new cupsFilter2 keyword in PPD files to allow for
	  the propagation of the actual MIME media type produced by a filter.
	- The scheduler did not always get the correct Kerberos username when
	  authenticating (STR #3670)
	- Added new cupsRasterOpenIO function and CUPS_RASTER_WRITE_PWG to the
	  CUPS imaging library to support printing to IPP Everywhere raster